# archetype-rust-service-actix-diesel-workspace

./: .gitignore  LICENSE-MIT  README.md  archetype.yaml
contents/{{ artifact-id }}/: .archetect.yml  .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
contents/{{ artifact-id }}/.github/workflows/: build.yml  release.yml
contents/{{ artifact-id }}/.support/docker/nginx/: nginx.conf
contents/{{ artifact-id }}/.support/docker/{{ artifact-id }}/etc/: {{ artifact-id }}.yml
contents/{{ artifact-id }}/xtask/: Cargo.toml
contents/{{ artifact-id }}/xtask/src/: main.rs
contents/{{ artifact-id }}/{{ artifact-id }}-api/: Cargo.toml  README.md
contents/{{ artifact-id }}/{{ artifact-id }}-api/src/: lib.rs  models.rs
contents/{{ artifact-id }}/{{ artifact-id }}-bin/: Cargo.toml  README.md
contents/{{ artifact-id }}/{{ artifact-id }}-bin/src/: cli.rs  logging.rs  main.rs  settings.rs
contents/{{ artifact-id }}/{{ artifact-id }}-client/: Cargo.toml  README.md
contents/{{ artifact-id }}/{{ artifact-id }}-client/src/: lib.rs
contents/{{ artifact-id }}/{{ artifact-id }}-core/: Cargo.toml  README.md
contents/{{ artifact-id }}/{{ artifact-id }}-core/src/: lib.rs  metrics.rs
contents/{{ artifact-id }}/{{ artifact-id }}-persistence/: .env  Cargo.toml  README.md
contents/{{ artifact-id }}/{{ artifact-id }}-persistence/migrations/00000000000001_base_tables/: down.sql  up.sql
contents/{{ artifact-id }}/{{ artifact-id }}-persistence/src/: database.rs  lib.rs  models.rs  schema.rs  settings.rs  tempdb.rs
contents/{{ artifact-id }}/{{ artifact-id }}-server/: Cargo.toml  README.md
contents/{{ artifact-id }}/{{ artifact-id }}-server/src/: cli.rs  lib.rs  main.rs  metrics.rs  routes.rs  settings.rs  settings.yml  telemetry.rs
contents/{{ artifact-id }}/{{ artifact-id }}-server/tests/: management.rs  server.rs
contents/{{ artifact-id }}/{{ artifact-id }}-server/tests/common/: mod.rs
