[package]
name = "{{ artifact-id }}-client"
version = "0.1.0"
authors = ["{{ author_full }}"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
{{ artifact-id }}-api = { path = "../{{ artifact-id }}-api" }
async-trait = "0.1"
reqwest = "0.11"
