[package]
name = "{{ artifact-id }}-core"
version = "0.1.0"
authors = ["{{ author_full }}"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
{{ artifact-id }}-persistence = { path = "../{{ artifact-id }}-persistence" }
log = "0.4"
once_cell = "1.7"
prometheus = "0.11"
