[package]
name = "{{ artifact-id }}-persistence"
version = "0.1.0"
authors = ["{{ author_full }}"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4"
diesel = { version = "1.4", features = ["chrono", "postgres", "r2d2"] }
dotenv = "0.15"
tracing = "0.1"
