[package]
name = "{{ artifact-id }}-persistence"
version = "0.1.0"
authors = ["{{ author_full }}"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4"
diesel = { version = "1.4", features = ["chrono", "postgres", "r2d2"] }
diesel_migrations = "1.4"
harsh = "0.2"
once_cell = "1.7"
serde = {version = "1.0", features = ["serde_derive"] }
tracing = "0.1"
tokio-diesel = "0.3"
url = { version = "2", features = ["serde"] }
