[package]
name = "{{ artifact-id }}-server"
version = "0.1.0"
authors = ["{{ author_full }}"]
edition = "2018"

[[bin]]
name = "{{ artifact-id }}"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
{{ artifact-id }}-api = { path = "../{{ artifact-id }}-api" }
{{ artifact-id }}-core = { path = "../{{ artifact-id }}-core" }
actix-web = "3.3"
actix-web-prom = "0.5"
actix-cors = "0.5"
atty = "0.2"
clap = "2"
dotenv = "0.15"
futures = "0.3"
prometheus = "0.11"

tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.2", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.1"
tracing-log = "0.1"
tracing-actix-web = "0.2"

[dev-dependencies]
{{ artifact-id }}-client = { path = "../{{ artifact-id }}-client" }
actix-rt = "1"
reqwest = { version = "0.10", default-features = false, features = ["rustls-tls", "json"] }

[features]
expensive_tests = []